2006-06-15  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_vc.py (P4.testCheckoutBranch): rename from
	'testBranch' to match other VC tests and have the tests run in
	roughly increasing order of dependency

	* buildbot/test/test_steps.py (LogObserver): new test to verify
	LogObservers can be created at various times and still get
	connected up properly

	* buildbot/test/runutils.py (setupBuildStepStatus): utility method
	to create BuildStepStatus instances that actually work.

	* buildbot/process/step.py (LogObserver): add outReceived and
	errReceived base methods, to be overridden

	* buildbot/status/builder.py (BuildStatus.addStepWithName): change
	API to take a name instead of a step, reducing the coupling
	somewhat. This returns the BuildStepStatus object so it can be
	passed to the new Step, instead of jamming it directly into the
	Step.
	* buildbot/process/step.py (BuildStep.setStepStatus): add a setter
	method
	* buildbot/process/base.py (Build.setupBuild): use both methods
	* buildbot/test/test_web.py (Logfile.setUp): rearrange the setup
	process a bit to match

2006-06-14  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (Adding LogObservers): add some limited
	docs on writing new LogObserver classes
	(Writing New Status Plugins): brief docs on how Status Plugins fit
	together

	* buildbot/process/step_twisted.py (TrialTestCaseCounter):
	implement a LogObserver that counts how many unit tests have been
	run so far
	(Trial.__init__): wire it in
	* buildbot/test/test_twisted.py (Counter): unit test for it

	* buildbot/process/step_twisted.py (HLint.commandComplete): update
	to new cmd.logs['stdio'] scheme
	(Trial.commandComplete): same
	(BuildDebs.commandComplete): same

	* buildbot/process/step.py (LoggedRemoteCommand): use a dict of
	LogFiles, instead of just a single one. The old single logfile is
	now called "stdio". LoggedRemoteCommand no longer creates a
	LogFile for you (the code to do that was broken anyway). If you